--- a/app/views/sunscreen/burnt.html.erb
+++ b/app/views/sunscreen/burnt.html.erb
@@ -1,3 +1,3 @@
-<p><%= @city.name %>: <%= @uv_index %></p>
+<p><%= @city %>: <%= @uv_index %></p>
 <%= image_tag "sss_sunburn.png" %>
 <p>You should wear sunscreen!</p>
