--- a/app/views/sunscreen/naked.html.erb
+++ b/app/views/sunscreen/naked.html.erb
@@ -1,3 +1,3 @@
-<p><%= @city.name %>: <%= @uv_index %></p>
+<p><%= @city %>: <%= @uv_index %></p>
 <p>feel free to go outside naked!</p>
 <%= image_tag "sss_slip.png" %>
